# metis

./: .gitignore  LICENSE  README.html  README.md  pyproject.toml
infra/: setup-continue.sh  setup.sh
src/metis/: __init__.py  chat.py  classify.py  cli.py  client.py  config.py  expand.py  health.py  link.py  pick.py  search.py  secrets.py  textio.py  ui.py
src/metis/cloud/: bot.py  search.py  storage.py  sync.py
src/metis/index/: canary.py  embed.py  store.py  sync.py
src/metis/ingest/: extract.py  process.py  write.py
tests/: conftest.py  test_arg_validation.py  test_canary.py  test_canary_width.py  test_categorization_corrupt.py  test_chat.py  test_chat_expand_save.py  test_chat_note_scope.py  test_chat_repl.py  test_chunk_text.py  test_chunking.py  test_client.py  test_config.py  test_config_defaults.py  test_config_guard.py  test_config_section_guard.py  test_crash_fixes.py  test_doctor.py  test_embed_alignment.py  test_embedding_model_alias.py  test_embedding_stamp.py  test_empty_choices.py  test_errors.py  test_expand.py  test_expand_cli_graceful.py  test_extract.py  test_extract_browser.py  test_extract_http_errors.py  test_extract_pdf_corrupt.py  test_extract_pdf_guard.py  test_health.py  test_health_split.py  test_ingest_folder.py  test_ingest_pick_cancel.py  test_ingest_sync_state.py  test_ingest_update.py  test_init_wizard.py  test_knn_votes.py  test_link.py  test_link_style.py  (+30 more)
