[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "metis-brain"
description = "CLI second brain for your markdown notes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "itsautomata" }]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["second-brain", "obsidian", "markdown", "cli", "rag", "embeddings", "knowledge-base", "semantic-search", "note-taking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "chromadb>=0.6.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "lxml-html-clean>=0.4.0",
    "youtube-transcript-api>=1.0.0",
    "keyring>=25.0.0",
    "questionary>=2.0.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
metis = "metis.cli:app"

[project.urls]
Homepage = "https://github.com/itsautomata/metis"
Repository = "https://github.com/itsautomata/metis"
Issues = "https://github.com/itsautomata/metis/issues"

# suppress chromadb's SWIG deprecation warnings in test output
[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.version]
path = "src/metis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/metis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
